<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">App settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather App</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="app_name">Weather App</string>
    <string name="weather_text">Weather now</string>
    <string name="weather_date">21 feb 2019</string>
    <string name="clouds_value">Cloudy</string>
    <string name="temperature_value">-8°C</string>
    <string name="damp_name">Humidity:</string>
    <string name="damp_value">66%</string>
    <string name="wind_name">Wind:</string>
    <string name="wind_value">6 м/c</string>
    <string name="wind_course">NW</string>

    <string name="city_help">City name</string>
    <string name="send">Send</string>
    <string name="switch1">Date</string>
    <string name="check1">Humidity</string>
    <string name="check2">Wind direction</string>
    <string name="check3">Wind speed</string>
    <string name="empty">Empty</string>


    <string name="spb">Saint Petersburg</string>
   <string name="msk">Moscow</string>
    <string name="choose_city">Choose city</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="nav_send">Contact form</string>
    <string name="month">Monthly weather forecast</string>
    <string name="ten_days">10-Day weather forecasts</string>
    <string name="three_days">3-Day weather forecasts</string>
    <string name="today">Weather today</string>
    <string name="temp_now_text">Temp now:</string>
    <string name="humidity_now_text">Humidity now:</string>
    <string name="settings_text">Settings</string>
    <string name="speed_text">m/s</string>


</resources>