<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/city_help"
                />


            <info.hoang8f.widget.FButton
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"

                android:minHeight="@dimen/demo_button_min_height"
                android:minWidth="@dimen/demo_button_min_width"
                android:text="@string/send"
                android:textColor="@android:color/white"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/isDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:text="@string/switch1" />


            <CheckBox
                android:id="@+id/isDamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check1"
                style="@style/checkBoxStyle"/>

            <CheckBox
                android:id="@+id/isWindCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check2"
                style="@style/checkBoxStyle"/>

            <CheckBox
                android:id="@+id/isWindValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check3"
                style="@style/checkBoxStyle"/>




        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>