<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/city_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginBottom="20dp"
                android:paddingBottom="20dp"
                android:visibility="gone"
                android:text=""
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/date_text"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:text="@string/weather_date"
                android:textSize="@dimen/text_size_medium" />


            <TextView
                android:id="@+id/clouds_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="10dp"
                android:text="@string/clouds_value"
                android:textSize="@dimen/text_size_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temp_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    android:text="@string/temperature_value"
                    android:textSize="@dimen/text_size_large" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/clouds" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/damp_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/damp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:text="@string/damp_name"
                    android:textSize="@dimen/text_size_medium" />
                <TextView
                    android:id="@+id/damp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:paddingStart="10dp"
                    android:text="@string/damp_value"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/wind_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/wind_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:text="@string/wind_name"
                    android:textSize="@dimen/text_size_medium" />
                <TextView
                    android:id="@+id/wind_course_text"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:paddingStart="5dp"
                    android:text="@string/wind_course"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/wind_value_text"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:paddingStart="10dp"
                    android:text="@string/wind_value"
                    android:textSize="@dimen/text_size_medium" />


            </LinearLayout>


        </LinearLayout>


</LinearLayout>